# stock-analysis-mcp

./: .dockerignore  AGENTS.md  Dockerfile  README-Docker.md  README.md  docker-compose.yml  docker-watch.yml  main.py  opencode.json  pyproject.toml  server.py  stock_analyzer.py
.github/workflows/: docker-build.yml
src/: model_training.py  stock_analyzer.py
