[project]
name = "stock-analysis-mcp"
version = "0.1.0"
description = "MCP server for Indian stock market analysis of BSE/NSE listed stocks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.21.0",
    "ruff>=0.14.4",
    "yfinance>=0.2.66",
]
