[project]
name = "stock-analysis-mcp"
version = "0.1.0"
description = "MCP server for Indian stock market analysis of BSE/NSE listed stocks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mcp[cli]>=1.21.0",
    "numpy>=2.3.4",
    "plotly>=6.4.0",
    "ruff>=0.14.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "yfinance>=0.2.66",
]
